crates/buff-lang-codegen-rust/tests/snapshots/channel_codegen__channel_codegen_new_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/channel_codegen.rs
assertion_line: 411
expression: src
---
fn f() {
    buff_lang_runtime::Channel::new(10 as usize);
}
