crates/buff-lang-codegen-rust/tests/snapshots/channel_codegen__sender_codegen_send_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/channel_codegen.rs
assertion_line: 425
expression: src
---
fn f() {
    let sender = buff_lang_runtime::Channel::new(8 as usize);
    sender.send(42);
}
